--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>John Mason</title>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="anthropic_stylesheet.css">
+    <link rel="stylesheet" href="john_about_stylesheet.css">
 </head>
 
 <body>
