--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
                 <h1><span class="first-name">John</span> <span class="last-name">Mason</span></h1>
                 <nav>
                     <ul>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Books</a></li>
-                        <li><a href="#">List 100</a></li>
-                        <li><a href="#">Llama Police</a></li>
-                        <li><a href="#">MLOps Guide</a></li>
-                        <li><a href="#">Tiếng Việt</a></li>
+                        <li><a href="https://www.ozymandiasinc.com/">Ozymandias</a></li>
                     </ul>
                 </nav>
             </div>
