--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     building a dual rules engine and ML to predict the value of returned retail inventory.</p>
                 <p>Before that, I worked on Microsoft's corporate strategy team and at the Boston Consulting Group.</p>
                 <p>I'm active on <a href="https://x.com/johnkmason">Twitter</a>, mostly to interact with professional
-                    public equities investors. Right now, I'm most heavily invested in metallurgical coal equities,
+                    public equities investors. Right now, I'm focused on metallurgical coal equities,
                     which I believe are
                     undervalued relative to how persistently critical they will be for developing countries to grow and
                     for the world to transition to new energy infrastructure.</p>
@@ -47,7 +47,6 @@
                 <a href="https://x.com/johnkmason"><i class="fab fa-twitter"></i> twitter </a>
                 <a href="https://www.linkedin.com/in/johnkmason/"><i class="fab fa-linkedin-in"></i> linkedin </a>
                 <a href="https://github.com/prodmason"><i class="fab fa-github"></i> github </a>
-            </div>
         </footer>
     </div>
 </body>
