--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </header>
         <main>
             <section class="content">
-                <p>I'm John Mason, a product manager, public equities investor, and aspiring entrepreneur.</p>
+                <p>Hi there. I'm John Mason, a public equities investor, product manager, and aspiring entrepreneur.</p>
                 <p>I'm currently on sabbatical living in Seoul, South Korea. Most recently, I was a PM at Lithic, a card
                     issuing infrastructure company directly integrated with Visa and Mastercard.
                     Previously, I've worked as a PM at Fluence, a grid-scale battery storage integrator, and at Optoro,
