--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <h1><span class="first-name">John</span> <span class="last-name">Mason</span></h1>
                 <nav>
                     <ul>
+                        <li><a href="john_about_about.html">About</a></li>
                         <li><a href="https://www.ozymandiasinc.com/">Ozymandias</a></li>
                     </ul>
                 </nav>
