--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <div class="container">
         <header>
             <div class="header-content">
-                <h1><span class="first-name">John</span> <span class="last-name">Mason</span></h1>
+                <a href="prodmason">
+                    <h1><span class="first-name">John</span> <span class="last-name">Mason</span></h1>
+                </a>
                 <nav>
                     <ul>
                         <li><a href="https://prodmason.com/about">About</a></li>
