--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <header>
             <div class="header-content">
-                <a href="prodmason.com">
+                <a href="https://www.prodmason.com">
                     <h1><span class="first-name">John</span> <span class="last-name">Mason</span></h1>
                 </a>
                 <nav>
