--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@
                 </a>
                 <nav>
                     <ul>
-                        <li><a href="prodmason.com/about">About</a></li>
+                        <li><a href="https://www.prodmason.com/about">About</a></li>
                         <li><a href="https://www.ozymandiasinc.com/">Ozymandias</a></li>
                     </ul>
                 </nav>
