--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     which I believe are
                     undervalued relative to how persistently critical they will be for developing countries to grow and
                     for the world to transition to new energy infrastructure.</p>
-                <p>I'm best reached via <a href="mailto:john.ky.mason@gmail.com">email</a>. Drop me a note!</p>
+                <p>Feel free to reach out via <a href="mailto:john.ky.mason@gmail.com">email</a>. Cheers! </p>
             </section>
             <aside class="profile-image">
                 <img src="john_pic.jpg" alt="John Mason">
