--- a/about/index.html
+++ b/about/index.html
@@ -138,9 +138,8 @@
                                 about policy across energy, redistribution, taxation, and the like.
                             </li>
                             <li>
-                                <b>Personal Finance & Investing.</b> See my LearnPF project below. During Covid, I also
-                                spent a lot more time learning how to assess individual companies as investments. I’m
-                                now slightly more confident in my ability to make fewer stupid investment decisions.
+                                <b>Personal Finance & Investing.</b> During Covid, I 
+                                spent a lot of time learning how to assess individual companies as investments. I've outperformed the S&P 500 for the past five years, and find investigating public equities really fun.
                             </li>
                         </ul>
                         <p>
