--- a/about/index.html
+++ b/about/index.html
@@ -57,11 +57,11 @@
                                 greatest advantage - and we squander it. Countless examples of immigrants who had
                                 massive impact- Katalin Karikó (messenger RNA/Covid vaccine), Elon Musk (Tesla, SpaceX),
                                 Sergey Brin (Google) show that just one immigrant can drive the creation of hundreds of
-                                thousands of jobs, technological advancement, and health breakthroughs. But how many
-                                potential Karikós and Musks do we turn away each year? Over 300,000. With the current
+                                thousands of jobs, technological advancement, and health breakthroughs. But we turn away over 300,000
+                                potential Karikós and Musks each year. With the current
                                 H1B system, each year we get applications from >450,000 world-class minds and <a
                                     href="https://www.uscis.gov/working-in-the-united-states/temporary-workers/h-1b-specialty-occupations-and-fashion-models/h-1b-electronic-registration-process">draw
-                                    straws to choose just a third of them</a>... randomly. In a lottery. Primarily for
+                                    straws to choose less than a third of them</a>... randomly. In a lottery. Primarily for
                                 political
                                 reasons, we choose to leave our prosperity to... luck.
                             </li>
