--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p>I'm currently on sabbatical living in Seoul, South Korea. Most recently, I was a PM at Lithic, a card
                     issuing infrastructure company directly integrated with Visa and Mastercard.
                     Previously, I've worked as a PM at Fluence, a grid-scale battery storage integrator, and at Optoro,
-                    building a dual rules engine and ML to predict the value of returned retail inventory.</p>
+                    building a rules engine paired with machine learning to predict the value of returned retail inventory.</p>
                 <p>Before that, I worked on Microsoft's corporate strategy team and at the Boston Consulting Group.</p>
                 <p>I'm active on <a href="https://x.com/johnkmason">Twitter</a>, mostly to interact with professional
                     public equities investors. Right now, I'm focused on metallurgical coal equities,
