--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <main>
             <section class="content">
                 <p>Hi there. I'm John Mason, a public equities investor, product manager, and aspiring entrepreneur.</p>
-                <p>I'm currently on sabbatical living in Seoul, South Korea. Most recently, I led two teams as a PM at Lithic, a card
+                <p>I'm currently on sabbatical living in Seoul, South Korea. Most recently, I PM'd two teams at Lithic, a card
                     issuing infrastructure company directly integrated with Visa and Mastercard.
-                    Previously, I worked as a PM at Fluence, a grid-scale battery storage integrator, and at Optoro,
+                    Previously, I've worked as a PM at Fluence, a grid-scale battery storage integrator, and at Optoro,
                     a company building software to handle returned retail inventory.</p>
                 <p>Before that, I was part of Microsoft's corporate strategy team and the Boston Consulting Group.</p>
                 <p>I'm active on <a href="https://x.com/johnkmason">Twitter</a>, mostly to interact with professional
