--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </header>
         <main>
             <section class="content">
-                <p>Hi there. I'm John Mason, a public equities investor, product manager, and aspiring entrepreneur.</p>
+                <p>Hi there. I'm John, a public equities investor, product manager, and aspiring entrepreneur.</p>
                 <p>I'm currently on sabbatical living in Seoul, South Korea. Most recently, I PM'd two teams at Lithic, a card
                     issuing infrastructure company directly integrated with Visa and Mastercard.
                     Previously, I've worked as a PM at Fluence, a grid-scale battery storage integrator, and at Optoro,
