--- a/about/index.html
+++ b/about/index.html
@@ -7,19 +7,19 @@
     <title>About</title>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="../john_about_stylesheet.css">
+    <link rel="stylesheet" href="john_about_stylesheet.css">
 </head>
 
 <body>
     <div class="container">
         <header>
             <div class="header-content">
-                <a href="https://www.prodmason.com">
+                <a href="prodmason">
                     <h1><span class="first-name">John</span> <span class="last-name">Mason</span></h1>
                 </a>
                 <nav>
                     <ul>
-                        <li><a href="https://www.prodmason.com/about">About</a></li>
+                        <li><a href="prodmason.com/about">About</a></li>
                         <li><a href="https://www.ozymandiasinc.com/">Ozymandias</a></li>
                     </ul>
                 </nav>
@@ -42,7 +42,7 @@
                         <p>
                             I have a lot of interests. Among them:
                         </p>
-                        <ul>
+                        <p>
                             <li>
                                 <b>Product Management.</b> I like building useful things. And product is a job where you
                                 get to do just that. I want to build lots of useful things in my lifetime, and long-term
@@ -50,6 +50,8 @@
                                 Product is synergistic with that long-term goal: it lets you practice building, just
                                 within a narrower scope.
                             </li>
+                        </p>
+                        <p>
                             <li>
                                 <b>STEM Immigration Expansion.</b> My parents are immigrants. I believe that expanding
                                 STEM immigration is by far the single greatest lever the United States has to improve
@@ -57,14 +59,16 @@
                                 greatest advantage - and we squander it. Countless examples of immigrants who had
                                 massive impact- Katalin Karikó (messenger RNA/Covid vaccine), Elon Musk (Tesla, SpaceX),
                                 Sergey Brin (Google) show that just one immigrant can drive the creation of hundreds of
-                                thousands of jobs, technological advancement, and health breakthroughs. But we turn away over 300,000
-                                potential Karikós and Musks each year. With the current
+                                thousands of jobs, technological advancement, and health breakthroughs. But how many
+                                potential Karikós and Musks do we turn away each year? Over 300,000. With the current
                                 H1B system, each year we get applications from >450,000 world-class minds and <a
                                     href="https://www.uscis.gov/working-in-the-united-states/temporary-workers/h-1b-specialty-occupations-and-fashion-models/h-1b-electronic-registration-process">draw
-                                    straws to choose less than a third of them</a>... randomly. In a lottery. Primarily for
+                                    straws to choose just a third of them</a>... randomly. In a lottery. Primarily for
                                 political
                                 reasons, we choose to leave our prosperity to... luck.
                             </li>
+                        </p>
+                        <p>
                             <li>
                                 <b>Defense and Security.</b> I’ve long been interested in foreign policy and defense. I
                                 spent a summer in Korea with the State Department as part of the <a
@@ -77,6 +81,8 @@
                                 superbly consolidated defense industry has become too unwieldy to build the modern and
                                 intelligent hardware-software platforms that I think will define warfare.
                             </li>
+                        </p>
+                        <p>
                             <li>
                                 <b>Renewable Energy and Sustainability.</b> I’ve long had an interest in renewables.
                                 Before I started my first full-time job in consulting, I got pretty good at selling cars
@@ -93,6 +99,8 @@
                                 wedded to generation via fossil fuels, at least given near-term (pre-2026) lithium
                                 capacity limitations and limited hydrogen infrastructure.
                             </li>
+                        </p>
+                        <p>
                             <li>
                                 <b>Real Estate.</b> My first internship was at a real estate private equity firm, JBG
                                 (now JBG Smith, NYSE: JBGS). I also closed in April 2020 on the sale of a SFH I bought a
@@ -118,6 +126,8 @@
                                 point; e.g., SF). Recent examples include migration to SF for tech and migration from SF
                                 to Seattle (Shiller’s mobility point).
                             </li>
+                        </p>
+                        <p>
                             <li>
                                 <b>AI/Machine Learning.</b> I worked on a machine learning-driven product at Optoro. For
                                 us, the value of AI came from automation, from labor efficiency in use cases where tons
@@ -129,6 +139,8 @@
                                 the Google Play store for Art and Design. It primarily uses a tuned version of Stable
                                 Diffusion to generate anime images.
                             </li>
+                        </p>
+                        <p>
                             <li>
                                 <b>Politics/Economics/Policy.</b> One of my college majors was political science; going
                                 into college I actually thought I’d be a career diplomat. To that end, I did NSLI-Y and
@@ -137,11 +149,14 @@
                                 top of a mountain reading philosophy, policy, and politics books. I’m still learning
                                 about policy across energy, redistribution, taxation, and the like.
                             </li>
+                        </p>
+                        <p>
                             <li>
-                                <b>Personal Finance & Investing.</b> During Covid, I 
-                                spent a lot of time learning how to assess individual companies as investments. I've outperformed the S&P 500 for the past five years, and find investigating public equities really fun.
+                                <b>Personal Finance & Investing.</b> See my LearnPF project below. During Covid, I also
+                                spent a lot more time learning how to assess individual companies as investments. I’m
+                                now slightly more confident in my ability to make fewer stupid investment decisions.
                             </li>
-                        </ul>
+                        </p>
                         <p>
                             1. Real estate investing also involves a host of tax considerations, from the mortgage
                             interest deduction to qualified business income deductions and depreciation, but I omitted
