--- a/about/index.html
+++ b/about/index.html
@@ -151,9 +151,7 @@
                         </p>
                         <p>
                             <li>
-                                <b>Personal Finance & Investing.</b> See my LearnPF project below. During Covid, I also
-                                spent a lot more time learning how to assess individual companies as investments. I’m
-                                now slightly more confident in my ability to make fewer stupid investment decisions.
+                                <b>Personal Finance & Investing.</b> I'm really into personal finance and pretty knowledgeable about all things taxes, retirement accounts, and credit card points. I also really enjoy looking at public equities in search of deals. I've outperformed the S&P 500 for the past five years.
                             </li>
                         </p>
                         <p>
