--- a/about/index.html
+++ b/about/index.html
@@ -151,7 +151,10 @@
                         </p>
                         <p>
                             <li>
-                                <b>Personal Finance & Investing.</b> I'm really into personal finance and pretty knowledgeable about all things taxes, retirement accounts, and credit card points. I also really enjoy looking at public equities in search of deals. I've outperformed the S&P 500 for the past five years.
+                                <b>Personal Finance & Investing.</b> I'm really into personal finance and pretty
+                                knowledgeable about all things taxes, retirement accounts, and credit card points. I
+                                also really enjoy looking at public equities in search of deals. I've outperformed the
+                                S&P 500 for the past five years.
                             </li>
                         </p>
                         <p>
