--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <div class="container">
         <header>
             <div class="header-content">
-                <a href="prodmason.com">
+                <a href="http://www.prodmason.com">
                     <h1><span class="first-name">John</span> <span class="last-name">Mason</span></h1>
                 </a>
                 <nav>
                     <ul>
-                        <li><a href="https://prodmason.com/about">About</a></li>
+                        <li><a href="https://www.prodmason.com/about">About</a></li>
                         <li><a href="https://www.ozymandiasinc.com/">Ozymandias</a></li>
                     </ul>
                 </nav>
