--- a/about/index.html
+++ b/about/index.html
@@ -152,8 +152,7 @@
                             <li>
                                 <b>Personal Finance & Investing.</b> I'm really into personal finance and pretty
                                 knowledgeable about all things taxes, retirement accounts, and credit card points. I
-                                also really enjoy looking at public equities in search of deals. I've outperformed the
-                                S&P 500 for the past five years.
+                                also really enjoy looking at public equities in search of deals.
                             </li>
                         </p>
                         <p>
