--- a/about/index.html
+++ b/about/index.html
@@ -121,7 +121,7 @@
                                     continuous
                                     uptrend in real home prices.</p>
                                 <p>
-                                    Paradoxically, I think one can see predictable short-term appreciation,
+                                    Paradoxically, I think one <i>can</i> see predictable short-term appreciation,
                                     particularly in situations of high intensity migration of high-income workers
                                     (<a
                                         href="https://economicgraph.linkedin.com/workforce-data?selectedFilter=view-all%2Fby-year#1">LinkedIn’s
