--- a/about/index.html
+++ b/about/index.html
@@ -158,9 +158,13 @@
                         </p>
                         <p>
                             <li>
-                                <b>Personal Finance & Investing.</b> I'm really into personal finance and pretty
-                                knowledgeable about all things taxes, retirement accounts, and credit card points. I
-                                also really enjoy looking at public equities in search of deals.
+                                <b>Public Markets Investing and Personal Finance.</b> I really enjoy looking at public
+                                markets in search
+                                of good deals across equities and fixed income. I'm also really into personal finance
+                                and pretty
+                                knowledgeable about all things taxes, retirement accounts, and credit card
+                                points (remnant of my time in consulting). I also manage cash flow and do the books for
+                                my brother's app business and set up his S-corp and solo 401k.
                             </li>
                         </p>
                         <p>
