Update personalfinance blurb

--- a/about/index.html
+++ b/about/index.html
@@ -158,11 +158,10 @@
                         </p>
                         <p>
                             <li>
-                                <b>Public Markets Investing and Personal Finance.</b> I really enjoy looking at public
-                                markets in search
-                                of good deals across equities and fixed income. I'm also really into personal finance
-                                and pretty
-                                knowledgeable about all things taxes, retirement accounts, and credit card
+                                <b>Public Markets Investing and Personal Finance.</b> I really enjoy searching public
+                                markets for good deals across equities and fixed income. I'm also really into personal
+                                finance and pretty knowledgeable about all things taxes, retirement accounts, and credit
+                                card
                                 points (remnant of my time in consulting). I also manage cash flow and do the books for
                                 my brother's app business and set up his S-corp and solo 401k.
                             </li>
