Bio updates post sabbatical

--- a/index.html
+++ b/index.html
@@ -27,18 +27,26 @@
         </header>
         <main>
             <section class="content">
-                <p>Hi there. I'm John, a public equities investor, product manager, and aspiring entrepreneur.</p>
-                <p>I'm currently on sabbatical living in Seoul, South Korea. Most recently, I PM'd two teams at Lithic, a card
-                    issuing infrastructure company directly integrated with Visa and Mastercard.
-                    Previously, I've worked as a PM at Fluence, a grid-scale battery storage integrator, and at Optoro,
-                    a company building software to handle returned retail inventory.</p>
-                <p>Before that, I was part of Microsoft's corporate strategy team and the Boston Consulting Group.</p>
+                <p>Hi there. I'm John Mason, a public equities investor, product manager, and aspiring entrepreneur.</p>
+                <p>I'm usually in one of Seattle, Toronto, NYC, DC, or SF. I'm a product manager at <a
+                        href="https://mercury.com/">Mercury</a>, which builds financial software for startups. Before
+                    that, I was a PM at Lithic, a card issuing infrastructure company directly integrated with Visa and
+                    Mastercard.</p>
+                <p>I've previously worked on Microsoft's corporate strategy team and at the Boston Consulting Group.</p>
                 <p>I'm active on <a href="https://x.com/johnkmason">Twitter</a>, mostly to interact with professional
                     public equities investors. Right now, I'm focused on metallurgical coal equities,
-                    which I believe are
-                    undervalued relative to how persistently critical they will be for developing countries to grow and
-                    for the world to transition to new energy infrastructure.</p>
-                <p>Feel free to reach out via <a href="mailto:john.ky.mason@gmail.com">email</a>. Cheers! </p>
+                    which I believe are undervalued relative to how persistently critical they will be for developing
+                    countries to grow and for the world to transition to new energy infrastructure.</p>
+                Three fun facts about me:
+                <li>In 2015, I bought a single-family home at auction and managed it for five years. I tiled the
+                    basement, put up drywall, replaced the main sewer line, and dealt with lots more
+                    unglamorous but fun stuff.</li>
+                <li>In the depths of Covid, I pondered my mortality and worked on <a
+                        href="https://www.ozymandiasinc.com/">Ozymandias</a>, a project to find, wield, and sell the
+                    single most durable material on earth. </li>
+                <li>I did growth marketing and finance/accounting for my 18yo brother's AI image generator app business,
+                    which did ~$300k in sales in 2023.</li>
+                <p>I'm best reached via <a href="mailto:john.ky.mason@gmail.com">email</a>. Drop me a note anytime!</p>
             </section>
             <aside class="profile-image">
                 <img src="john_pic.jpg" alt="John Mason">
