--- a/index.html
+++ b/index.html
@@ -38,15 +38,19 @@
                     which I believe are undervalued relative to how persistently critical they will be for developing
                     countries to grow and for the world to transition to new energy infrastructure.</p>
                 Three fun facts about me:
-                <li>In 2015, I bought a single-family home at auction and managed it for five years. I tiled the
-                    basement, put up drywall, replaced the main sewer line, and dealt with lots more
-                    unglamorous but fun stuff.</li>
-                <li>In the depths of Covid, I pondered my mortality and worked on <a
-                        href="https://www.ozymandiasinc.com/">Ozymandias</a>, a project to find, wield, and sell the
-                    single most durable material on earth. </li>
-                <li>I did growth marketing and finance/accounting for my 18yo brother's AI image generator app business,
-                    which did ~$300k in sales in 2023.</li>
-                <p>I'm best reached via <a href="mailto:john.ky.mason@gmail.com">email</a>. Drop me a note anytime!</p>
+                <ul>
+                    <li>In 2015, I bought a single-family home at auction and managed it for five years. I tiled the
+                        basement, put up drywall, replaced the main sewer line, and dealt with lots more
+                        unglamorous but fun stuff.</li>
+                    <li>In the depths of Covid, I pondered my mortality and worked on <a
+                            href="https://www.ozymandiasinc.com/">Ozymandias</a>, a project to find, wield, and sell the
+                        single most durable material on earth. </li>
+                    <li>I did growth marketing and finance/accounting for my 18yo brother's AI image generator app
+                        business,
+                        which did ~$300k in sales in 2023.</li>
+                    <p>I'm best reached via <a href="mailto:john.ky.mason@gmail.com">email</a>. Drop me a note anytime!
+                    </p>
+                </ul>
             </section>
             <aside class="profile-image">
                 <img src="john_pic.jpg" alt="John Mason">
