--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <li>In the depths of Covid, I pondered my mortality and worked on <a
                             href="https://www.ozymandiasinc.com/">Ozymandias</a>, a project to find, wield, and sell the
                         single most durable material on earth. </li>
-                    <li>I did growth marketing and finance/accounting for my 18yo brother's AI image generator app
+                    <li>I did growth marketing and finance/accounting for my brother's AI image generator app
                         business,
                         which did ~$300k in sales in 2023.</li>
                     <p>I'm best reached via <a href="mailto:john.ky.mason@gmail.com">email</a>. Drop me a note anytime!
