--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <section class="content">
                 <p>Hi there. I'm John Mason, a public equities investor, product manager, and aspiring entrepreneur.</p>
                 <p>I'm usually in one of Seattle, Toronto, NYC, DC, or SF. I'm a product manager at <a
-                        href="https://mercury.com/">Mercury</a>, which builds financial software for startups. Before
+                        href="https://mercury.com/">Mercury</a>, which builds banking and finance software for startups. Before
                     that, I was a PM at Lithic, a card issuing infrastructure company directly integrated with Visa and
                     Mastercard.</p>
                 <p>I've previously worked on Microsoft's corporate strategy team and at the Boston Consulting Group.</p>
