--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         href="https://mercury.com/">Mercury</a>, which builds banking and finance software for startups. Before
                     that, I was a PM at Lithic, a card issuing infrastructure company directly integrated with Visa and
                     Mastercard.</p>
-                <p>I've previously worked on Microsoft's corporate strategy team and at the Boston Consulting Group.</p>
+                <p>I've also previously worked on Microsoft's corporate strategy team and at the Boston Consulting Group.</p>
                 <p>I'm active on <a href="https://x.com/johnkmason">Twitter</a>, mostly to interact with professional
                     public equities investors. Right now, I'm focused on metallurgical coal equities,
                     which I believe are undervalued relative to how persistently critical they will be for developing
@@ -42,12 +42,11 @@
                         basement, put up drywall, replaced the main sewer line, and dealt with lots more
                         unglamorous but fun stuff.</li>
                     <li>In the depths of Covid, I pondered my mortality and worked on <a
-                            href="https://www.ozymandiasinc.com/">Ozymandias</a>, a project to find, wield, and sell the
-                        single most durable material on earth. </li>
-                    <li>I did growth marketing and finance/accounting for my brother's AI image generator app
+                            href="https://www.ozymandiasinc.com/">Ozymandias</a>, a project to find, wield, and sell the most durable material on earth. </li>
+                    <li>I incorporated and did growth marketing and finance/accounting for my brother's AI image generator app
                         business,
                         which did ~$300k in sales in 2023.</li>
-                    <p>I'm best reached via <a href="mailto:john.ky.mason@gmail.com">email</a>. Drop me a note anytime!
+                    <p> Drop me a note anytime at <a href="mailto:john.ky.mason@gmail.com">email</a>.
                     </p>
             </section>
             <aside class="profile-image">
