--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li>I incorporated and did growth marketing and finance/accounting for my brother's AI image generator app
                         business,
                         which did ~$300k in sales in 2023.</li>
-                    <p> Drop me a note anytime at <a href="mailto:john.ky.mason@gmail.com">email</a>.
+                    <p> Drop me a note anytime via <a href="mailto:john.ky.mason@gmail.com">email</a>.
                     </p>
             </section>
             <aside class="profile-image">
