--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </header>
         <main>
             <section class="content">
-                <p>Hi there. I'm John Mason, a public equities investor, product manager, and aspiring entrepreneur.</p>
-                <p>I'm usually in one of Seattle, Toronto, NYC, DC, or SF. I'm a product manager at <a
+                <p>Hi there. I'm John, a public equities investor, product manager, and aspiring entrepreneur.</p>
+                <p>You can usually find me in Seattle, Toronto, NYC, or DC. I'm a product manager at <a
                         href="https://mercury.com/">Mercury</a>, which builds banking and finance software for startups. Before
                     that, I was a PM at Lithic, a card issuing infrastructure company directly integrated with Visa and
                     Mastercard.</p>
