--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <main>
             <section class="content">
                 <p>Hi there. I'm John, a public equities investor, product manager, and aspiring entrepreneur.</p>
-                <p>You can usually find me in Seattle, Toronto, NYC, or DC. I'm a product manager at <a
+                <p>You can usually find me in Seattle, Toronto, NYC, or DC. I'm currently a product manager at <a
                         href="https://mercury.com/">Mercury</a>, which builds banking and finance software for startups. Before
                     that, I was a PM at Lithic, a card issuing infrastructure company directly integrated with Visa and
                     Mastercard.</p>
