--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p>Hi there. I'm John, a public equities investor, product manager, and aspiring entrepreneur.</p>
                 <p>You can usually find me in Seattle, Toronto, NYC, or DC. I'm currently a product manager at <a
                         href="https://mercury.com/">Mercury</a>, which builds banking and finance software for startups. Before
-                    that, I was a PM at Lithic, a card issuing infrastructure company directly integrated with Visa and
+                    that, I was a PM at <a href="https://lithic.com/">Lithic</a>, a card issuing infrastructure company directly integrated with Visa and
                     Mastercard.</p>
                 <p>I've also previously worked on Microsoft's corporate strategy team and at the Boston Consulting Group.</p>
                 <p>I'm active on <a href="https://x.com/johnkmason">Twitter</a>, mostly to interact with professional
